# geometa

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yaml  Tiltfile  _wrangler.toml  components.json  drizzle.config.ts  eslint.config.js  justfile  mise.local.toml  mise.toml  package-lock.json  package.json  renovate.json  renovate.json5  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
.ci/: kind-with-registry.sh  libsql.yaml  postgres.yaml  tilt-with-cluster.sh
.dev/: tilt-with-cluster.sh
.githooks/: README.md  setup.sh
.husky/: pre-commit
.tilt/: project.env
.zed/: settings.json
apps/: kustomization.yaml
apps/discord-bot/: .dockerignore  Cargo.toml  Dockerfile  justfile
apps/discord-bot/.githooks/: pre-commit
apps/discord-bot/flux/: deployment.yaml  image-update.yaml  kustomization.yaml  network-policy.yaml  secrets.enc.yaml
apps/discord-bot/src/: main.rs
apps/discord-bot/src/alm/api/: client.rs
apps/discord-bot/src/discord/: utils.rs
apps/discord-bot/src/discord/commands/: mod.rs  publish.rs
apps/discord-bot/src/types/: geoguessr.rs  mod.rs
apps/discord-bot/zed/: settings.json
apps/discord_bot/: Cargo.toml  Dockerfile
apps/discord_bot/flux/: kustomization.yaml  sa.yaml  secrets.enc.yaml
apps/discord_bot/src/: main.rs
cluster/: .envrc  .gitignore  .sourceignore  justfile  operators.yaml
docs/: personal maps.md  self-hosting.md
flux/: cronjobs.yaml  ghcr.enc.yaml  ingres.yaml  secrets.enc.yaml
(+985 files in other folders)
