[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["rustls_backend"] }
tokio = { version = "1.46.0", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "signal"
] }

[profile.release]
opt-level = 3
strip = true
lto = true
