[package]
name = "discord_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["rustls_backend"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "fs"] }

[profile.release]
strip = true
opt-level = 3
lto = true
